--- a/TouristGreenbook/TGB.WebAPI/Views/AddNewTrip/FinallStage.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AddNewTrip/FinallStage.cshtml
@@ -2,20 +2,39 @@
     ViewData["Title"] = "Finall stage";
 }
 
-<p>
-    @ViewBag.City;
-    <br />
-    @ViewBag.Start;
-    <br />
-    @ViewBag.Finish;
-    <br />
-    @ViewBag.Budget;
-    <br />
-    @{
-        foreach (var tag in ViewBag.ChosenTags)
-        {
-            <i>@tag</i>
-            <br />
-        }
+<div id="final_stage">
+    <div id="tags">
+        <ul>
+            @{
+                foreach (var element in ViewBag.TagedPlace)
+                {
+                    <li>
+                        <h3>@element.Key</h3>
+                        @{
+                            foreach (var place in element.Value)
+                            {
+                                <input type="checkbox" name="@place.GetHashCode()" />
+                                <label for="@place.GetHashCode()">@place.Name</label>
+                                <br />
+                            }
+                        }
+                    </li>
+                }
+            }
+        </ul>
+        <button onclick="CreatePath()" id="submit" value="Create" />
+    </div>
+    <div id="path">
+
+    </div>
+    <div id="info">
+        <h3>Information</h3>
+        <p id="description"></p>
+    </div>
+</div>
+
+<script type="text/javascript">
+    function CreatePath() {
+
     }
-</p>
+</script>
