post merge fixes

--- a/TouristGreenbook/TGB.WebAPI/Views/AddPlace/AddingNewPlaceFromUser.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AddPlace/AddingNewPlaceFromUser.cshtml
@@ -5,7 +5,7 @@
 
 <div>
     <h2>Add a new place</h2>
-    <form method="post">
+    <form method="post" action="/AddPlace/AddingPlaceToDataBase">
         <table>
             <tr>
                 <td><p>Name</p></td>
