post merge union

--- a/TouristGreenbook/TGB.WebAPI/Views/YourTrips/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/YourTrips/Index.cshtml
@@ -12,5 +12,5 @@
         <li><a href="YourTrips/Trip/?id=@trip.Id">@trip.Id @trip.City</a></li>
     }
 
-    <li><a href="">+</a></li>
+    <li><a href="/AddNewTrip/InitialStage"><h4>+</h4></a></li>
 </ul>
