Created new YourTrips controller with scaffolded View

--- a/TouristGreenbook/TGB.WebAPI/Views/YourTrips/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/YourTrips/Index.cshtml
@@ -1,13 +1,53 @@
-﻿@{
-    ViewData["Title"] = "Your Trips";
+﻿@model IEnumerable<TGB.WebAPI.Models.YourTrips>
+
+@{
+    ViewData["Title"] = "Index";
 }
 
-@model List<Trip>
+<h2>Index</h2>
 
-<h2>Your saved Trips</h2>
-
-@foreach (var trip in Model)
-{
-    <li><a href="YourTrips/Trip/?id=@trip.Id">@trip.Id</a></li>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.City)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StayTimeStart)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StayTimeFinish)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Budget)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.City)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StayTimeStart)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StayTimeFinish)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Budget)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
 }
-
+    </tbody>
+</table>
