--- a/TouristGreenbook/TGB.WebAPI/Views/AddPlace/AddingNewPlaceFromUser.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AddPlace/AddingNewPlaceFromUser.cshtml
@@ -34,7 +34,7 @@
             <tr>
             <tr>
                 <td><p>Coordinates</p></td>
-                <td><input type="text"  name="Coordinates" /></td>
+                <td><input type="text" name="Coordinates" /></td>
             </tr>
             <tr>
                 <td><p>Description</p></td>
@@ -54,5 +54,36 @@
         </table>
     </form>
 
+</div>
+
+<style>
+    #map {
+        width: 500px;
+        height: 500px;
+    }
+</style>
+<div class="row">
+    <div id="map"></div>
+    <script>
+        var map;
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: { lat: 49.8382600, lng: 24.0232400 },
+                zoom: 8
+            });
+            map.addListener('click', function (e) {
+                placeMarkerAndPanTo(e.latLng, map);
+            });
+        }
+        function placeMarkerAndPanTo(latLng, map) {
+            var marker = new google.maps.Marker({
+                position: latLng,
+                map: map
+            });
+            map.panTo(latLng);
+        }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7tnGRfh4zut21AaOKJpBEGIh7UXJobVM&callback=initMap"
+            async defer></script>
 </div>
 
