--- a/TouristGreenbook/TGB.WebAPI/Views/AddNewTrip/FinallStage.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AddNewTrip/FinallStage.cshtml
@@ -22,7 +22,7 @@
                 }
             }
         </ul>
-        <button onclick="CreatePath()" id="submit" value="Create" />
+        <button class="btn btn-light" type="submit" onclick="">Create</button>
     </div>
     <div id="path">
 
