--- a/TouristGreenbook/TGB.WebAPI/Views/AddNewTrip/InitialStage.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AddNewTrip/InitialStage.cshtml
@@ -5,7 +5,7 @@
 <form action="/AddNewTrip/FinallStage" method="post">
     <label for="city">Місто в яке ви подорожуєте*</label>
     <br />
-    <select name="city">
+    <select name="city" required>
         @{
             foreach (var city in ViewBag.Cities)
             {
@@ -16,21 +16,21 @@
     <br />
     <label for="startDate">Дата та час приїзду в місто*</label>
     <br />
-    <input type="date" name="startDate" />
-    <input type="time" name="startTime" />
+    <input type="date" name="startDate"  required/>
+    <input type="time" name="startTime"/>
     <br />
     <label for="finishDate">Дата та час відїзду з міста*</label>
     <br />
-    <input type="date" name="finishDate" />
-    <input type="time" name="finishTime" />
+    <input type="date" name="finishDate" required/>
+    <input type="time" name="finishTime"/>
     <br />
     <label for="budget">Орієнтовний бюджет на 1 день*</label>
     <br />
-    <input type="number" name="budget" />
+    <input type="number" name="budget" required/>
     <br />
     <label for="tags">Типи закладів які ви хочете відвідата*</label>
     <br />
-    <select name="chosenTags" multiple="multiple">
+    <select name="chosenTags" multiple="multiple" required>
         @{
             foreach (var tag in ViewBag.Tags)
             {
@@ -39,5 +39,5 @@
         }
     </select>
     <br />
-    <input type="submit" value="Submit" name="submit" />
+    <input class="btn btn-light" type="submit" value="Submit" name="submit" />
 </form>
