--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TGB.WebAPI.Models.YourTrips>
+﻿@model IEnumerable<TGB.WebAPI.Models.Trip>
 
 @{
     ViewData["Title"] = "Index";
