--- a/TouristGreenbook/TGB.WebAPI/Views/Shared/_LoginPartial.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
             {
                 @if (User.IsInRole("User"))
                 {
-                    <li><a asp-area="" asp-controller="YourTrips" asp-action="Index">Your Trips</a></li>
+                    <li><a asp-area="" asp-controller="Trips" asp-action="Index">Your Trips</a></li>
                 }
             }
             <li><a asp-area="" asp-controller="AddPlace" asp-action="AddingNewPlaceFromUser">Add Place</a></li>
