--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Delete.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Delete.cshtml
@@ -1,13 +1,14 @@
-﻿@model TGB.WebAPI.Models.YourTrips
+﻿@model TGB.WebAPI.Models.Trip
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h2>Details</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>YourTrips</h4>
+    <h4>Trips</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -34,15 +35,11 @@
         <dd>
             @Html.DisplayFor(model => model.Budget)
         </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Places)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Places)
-        </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
