--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Details.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Details.cshtml
@@ -1,14 +1,13 @@
-﻿@model TGB.WebAPI.Models.YourTrips
+﻿@model TGB.WebAPI.Models.Trip
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
-<h2>Delete</h2>
+<h2>Details</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>YourTrips</h4>
+    <h4>Trips</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -36,10 +35,8 @@
             @Html.DisplayFor(model => model.Budget)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
