--- a/TouristGreenbook/TGB.WebAPI/Views/Shared/_LoginPartial.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
         <ul class="nav navbar-nav navbar-right">
             @if (User.Identity.IsAuthenticated)
             {
-                @if (User.IsInRole("User"))
+                if (User.IsInRole("User"))
                 {
                     <li><a asp-area="" asp-controller="Trips" asp-action="Index">Your Trips</a></li>
                 }
