--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Details.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Details.cshtml
@@ -34,6 +34,12 @@
         <dd>
             @Html.DisplayFor(model => model.Budget)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Places)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Places)
+        </dd>
     </dl>
 </div>
 <div>
