--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Edit.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Edit.cshtml
@@ -34,6 +34,11 @@
                 <span asp-validation-for="Budget" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Places" class="control-label"></label>
+                <input asp-for="Places" class="form-control" />
+                <span asp-validation-for="Places" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
