--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Index.cshtml
@@ -24,6 +24,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Budget)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Places)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -41,6 +44,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Budget)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Places.Count)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
