--- a/TouristGreenbook/TGB.WebAPI/Views/AddPlace/AddingNewPlaceFromUser.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AddPlace/AddingNewPlaceFromUser.cshtml
@@ -37,6 +37,14 @@
                 <td><input type="text" name="Coordinates" /></td>
             </tr>
             <tr>
+                <td><p>Latitude</p></td>
+                <td><input type="text" id="lat" name="Latitude" /></td>
+            </tr>
+            <tr>
+                <td><p>Longtitude</p></td>
+                <td><input type="text" id="long" name="Longtitude" /></td>
+            </tr>
+            <tr>
                 <td><p>Description</p></td>
                 <td><input type="text" name="Description" /></td>
             </tr>
@@ -57,33 +65,48 @@
 </div>
 
 <style>
-    #map {
+    #map, #map_canvas {
         width: 500px;
         height: 500px;
     }
 </style>
-<div class="row">
-    <div id="map"></div>
-    <script>
-        var map;
-        function initMap() {
-            map = new google.maps.Map(document.getElementById('map'), {
-                center: { lat: 49.8382600, lng: 24.0232400 },
-                zoom: 8
-            });
-            map.addListener('click', function (e) {
-                placeMarkerAndPanTo(e.latLng, map);
-            });
-        }
-        function placeMarkerAndPanTo(latLng, map) {
-            var marker = new google.maps.Marker({
-                position: latLng,
-                map: map
-            });
-            map.panTo(latLng);
-        }
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7tnGRfh4zut21AaOKJpBEGIh7UXJobVM&callback=initMap"
-            async defer></script>
-</div>
 
+<div id="map_canvas" style="width: 500px; height: 250px;"></div>
+
+
+<div>
+    <div id="map"></div>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7tnGRfh4zut21AaOKJpBEGIh7UXJobVM&callback=initMap">
+    </script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript">
+        var map;
+
+        function initialize() {
+            var myLatlng = new google.maps.LatLng(49.8382600, 24.0232400);
+
+            var myOptions = {
+                zoom: 8,
+                center: myLatlng,
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+            };
+            map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+
+            var marker = new google.maps.Marker({
+                draggable: true,
+                position: myLatlng,
+                map: map,
+                title: "Your location"
+            });
+
+            google.maps.event.addListener(marker, 'dragend', function (event) {
+
+
+                document.getElementById("lat").value = event.latLng.lat();
+                document.getElementById("long").value = event.latLng.lng();
+            });
+        }
+        google.maps.event.addDomListener(window, "load", initialize());
+    </script>
+</div>
