Modified TripsController and related views to add places to the trip

--- a/TouristGreenbook/TGB.WebAPI/Views/Home/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Home/Index.cshtml
@@ -2,4 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-
+<h3>
+    Welcome to the best service for planning your trips.
+</h3>
+<p>Why you have to choose us? Because we give you all that you need for planning you trip!</p>
+<li>Choose places by their type</li>
+<li>by their rating</li>
+<li>Planning you budget</li>
+<li></li>
