--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Create.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<TGB.WebAPI.Models.Place>
 
 
-<form action="CreateFinal" method="post">
+<form action="SelectPlaces" method="post">
     <label for="city">Місто, в яке ви подорожуєте*</label>
     <br />
     <select name="city" required>
