--- a/TouristGreenbook/TGB.WebAPI/Views/Shared/_Layout.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Shared/_Layout.cshtml
@@ -42,9 +42,35 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        
+        @*<footer>
             <p>&copy; 2019 - TGB.WebAPI</p>
-        </footer>
+        </footer>*@
+    </div>
+    
+    <style>
+        .footer {
+            position: fixed;
+            /*left: 0;*/
+            bottom: 0;
+            width: 100%;
+            background-color: black; /*red;*/
+            color: white;
+            text-align: center;
+        }
+    </style>
+    <div class="footer text-center">
+        @*<hr />*@
+        <div class="row">
+            <div class="col-sm-12">
+                <ul class="nav nav-pills nav-stacked">
+                    <a href="#">Contact us</a>
+                    <a>|</a>
+                    <a href="#">Our team</a>
+                </ul>
+            </div>
+        </div>
+        <p>&copy; 2019 - TGB.WebAPI</p>
     </div>
 
     <environment include="Development">
