--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-striped table-hover table-condensed">
     <thead>
         <tr>
             <th>
