--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/CreateFinal.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/CreateFinal.cshtml
@@ -1,5 +1,5 @@
-﻿@model IEnumerable<TGB.WebAPI.Models.Place> 
-    @*Dictionary<string, List<Place>>()*@
+﻿@model IEnumerable<TGB.WebAPI.Models.Place>
+@*Dictionary<string, List<Place>>()*@
 
 @{
     ViewData["Title"] = "Choose needed places";
@@ -12,6 +12,76 @@
             {
                 <table class="table">
                     <thead>
+                        <tr>
+                            <th>
+                                <input type="checkbox" name="selectAll" />
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Type)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Address)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.WorkTimeStart)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.WorkTimeFinish)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Rating)
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @{
+                            <tr>
+                                <h3>@element.Key</h3>
+                            </tr>
+                            {
+                                foreach (var place in Model) //(var place in element.Value)
+                                {
+                                    if (place.Type == element.Key)
+                                    {
+                                        <tr>
+                                            <td>
+                                                <input type="checkbox" name="@place.GetHashCode()" />
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => place.Name)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => place.Type)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => place.Address)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => place.WorkTimeStart)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => place.WorkTimeFinish)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => place.Rating)
+                                            </td>
+                                        </tr>
+                                    }
+
+
+                                }
+                            }
+                        }
+                    </tbody>
+                </table>
+            }
+        }
+
+        @*<table class="table">
+                <thead>
                     <tr>
                         <th>
                             <input type="checkbox" name="selectAll" />
@@ -35,9 +105,11 @@
                             @Html.DisplayNameFor(model => model.Rating)
                         </th>
                     </tr>
-                    </thead>
-                    <tbody>
-                        @{
+                </thead>
+                <tbody>
+                    @{
+                        foreach (var element in ViewBag.TagedPlace)
+                        {
                             <tr>
                                 <h3>@element.Key</h3>
                             </tr>
@@ -70,87 +142,15 @@
                                             </td>
                                         </tr>
                                     }
-                                            
-                                            
+
+
                                 }
                             }
-                        }
-                    </tbody>
-                </table>
-            }
-        }
 
-        @*<table class="table">
-            <thead>
-                <tr>
-                    <th>
-                        <input type="checkbox" name="selectAll" />
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Name)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Type)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Address)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.WorkTimeStart)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.WorkTimeFinish)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Rating)
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @{
-                    foreach (var element in ViewBag.TagedPlace)
-                    {
-                        <tr>
-                            <h3>@element.Key</h3>
-                        </tr>
-                        {
-                            foreach (var place in Model) //(var place in element.Value)
-                            {
-                                if (place.Type==element.Key)
-                                {
-                                    <tr>
-                                        <td>
-                                            <input type="checkbox" name="@place.GetHashCode()" />
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => place.Name)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => place.Type)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => place.Address)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => place.WorkTimeStart)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => place.WorkTimeFinish)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => place.Rating)
-                                        </td>
-                                    </tr>
-                                }
-                                
-                                
-                            }
                         }
-
                     }
-                }
-            </tbody>
-        </table>*@
+                </tbody>
+            </table>*@
         <button class="btn btn-light" type="submit" onclick="">Create</button>
     </div>
     <div id="path">
@@ -167,3 +167,96 @@
 
     }
 </script>
+
+
+<style>
+    #map, #map_canvas {
+        width: 500px;
+        height: 500px;
+    }
+</style>
+
+<div id="map_canvas" style="width: 1000px; height: 1000px;"></div>
+
+<div id="map"></div>
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7tnGRfh4zut21AaOKJpBEGIh7UXJobVM&callback=initMap">
+</script>
+
+﻿
+<script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
+
+
+<style>
+    #map_canvas img {
+        max-width: none;
+    }
+</style>
+
+
+<style>
+    .infoDiv {
+        height: 200px;
+        width: 300px;
+        -webkit-user-select: none;
+        background-color: white;
+    }
+</style>
+<br />
+
+<div id="map_canvas" style="height: 550px;"></div>
+
+@section scripts {
+    <section class="scripts">
+
+        <script type="text/javascript">
+
+
+            $(document).ready(function () {
+                Initialize();
+            });
+
+            function Initialize() {
+
+                google.maps.visualRefresh = true;
+                var Lviv = new google.maps.LatLng(49.8382600, 24.0232400);
+
+                var mapOptions = {
+                    zoom: 13,
+                    center: Lviv,
+                    mapTypeId: google.maps.MapTypeId.G_NORMAL_MAP
+                };
+
+                var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
+                var data1  = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(ViewBag.tagedPlaces));
+                var data = [
+                    { "Id": 1, "Name": "Kryyivka", "Lat": "49.841303735401844", "Long": "24.032249450683594" },
+                    { "Id": 2, "Name": "Opernyi teatr ", "Lat": "49.84404362156558", "Long": "24.026198387145996" },
+                    { "Id": 3, "Name": "Vysokyi zamok", "Lat": "49.848222340822105", "Long": "24.03933048248291" },
+                    { "Id": 4, "Name": "Universytet Franka", "Lat": "49.8406118203997", "Long": "24.022507667541504" }
+                ];
+
+                $.each(data1, function (i, item) {
+                    var marker = new google.maps.Marker({
+                        'position': new google.maps.LatLng(item.Coordinates),
+                        'map': map,
+                        'title': item.Name
+                    });
+
+                    marker.setIcon('http://maps.google.com/mapfiles/ms/icons/blue-dot.png')
+
+                    var infowindow = new google.maps.InfoWindow({
+                        content: "<div class='infoDiv'><h2>" + item.Name + "</div></div>"
+                    });
+
+                    google.maps.event.addListener(marker, 'click', function () {
+                        infowindow.open(map, marker);
+                    });
+
+                })
+            }
+
+
+        </script>
+    </section>
+} 
